--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <svg id="view"></svg>
   </body>
 
   <link rel="preconnect" href="https://fonts.googleapis.com" />
