Adds canvas rendering

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <svg id="view"></svg>
+    <canvas id="view"></canvas>
   </body>
 
   <link rel="preconnect" href="https://fonts.googleapis.com" />
